src/objects/Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Shipment_Date__c</fullName>
        <label>Actual Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>B2B_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B2B Order</label>
        <referenceTo>B2B_Order__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B2B_Partner_Id__c</fullName>
        <label>B2B Partner Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B2B Partner</label>
        <referenceTo>B2B_Partner__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance_Age__c</fullName>
        <formula>Today () -  Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Address_2__c</fullName>
        <label>Bill Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_1__c</fullName>
        <label>Bill To Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Company__c</fullName>
        <label>Bill To Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Email__c</fullName>
        <label>Bill To Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Name__c</fullName>
        <label>Bill To Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Phone__c</fullName>
        <label>Bill To Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip_Postal_Code__c</fullName>
        <label>Bill To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_Ship_Early__c</fullName>
        <label>Can Ship Early?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collection_Status__c</fullName>
        <label>Collection Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue Up To 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue 31 - 60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue 60 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Currency__c</fullName>
        <formula>TEXT(Opportunity__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Account Name from Account that owns linked Opportunity</description>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Rejected__c</fullName>
        <label>Date Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <formula>Opportunity__r.Distributor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDI_810_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDI 810 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDI_855_Date_Sent_SO_Populated__c</fullName>
        <label>EDI 855 Date Sent - SO Populated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDI_855_Date_Sent_SO_Rejected__c</fullName>
        <label>EDI 855 Date Sent - SO Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDI_855_Sent_SO_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EDI 855 sent when Navision Sales is populated</description>
        <label>EDI 855 Sent - SO Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDI_855_Sent_SO_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EDI 855 Sent when OA Rejects SO</description>
        <label>EDI 855 Sent - SO Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDI_856_Date_Sent__c</fullName>
        <label>EDI 856 Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDI_856_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EDI 856 is sent when actual shipment date is populated</description>
        <label>EDI 856 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edi_810_Date_Sent__c</fullName>
        <label>Edi 810 Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Customer_Address_1__c</fullName>
        <label>End Customer Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Address_2__c</fullName>
        <label>End Customer Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_City__c</fullName>
        <label>End Customer City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Company__c</fullName>
        <label>End Customer Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Contact_Email__c</fullName>
        <label>End Customer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Customer_Contact_Name__c</fullName>
        <label>End Customer Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Contact_Phone__c</fullName>
        <label>End Customer Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>End_Customer_Country__c</fullName>
        <label>End Customer Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_State__c</fullName>
        <label>End Customer State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Zip_Postal_Code__c</fullName>
        <label>End Customer Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Mode__c</fullName>
        <label>Freight Mode</label>
        <picklist>
            <picklistValues>
                <fullName>5 Day (standard)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2 Day (expedited)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Day (overnight)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Expedited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Routed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Submission_DateTime__c</fullName>
        <description>Date and Time of last submission of the Sales Order to OA.</description>
        <label>Last Submission DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <picklist>
            <picklistValues>
                <fullName>FGI REFURB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGI-EVAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGI-IRON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGI-NIMBLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGI-SYNNEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRB-CREDIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRB-ENGFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRB-IRON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRB-LOANER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRB-MFGFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRB-REVIEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRB-SUPERM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRB-SYNNEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAW-IRON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAW-NIMBLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAW-SYNNEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCRAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-AMSDEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-AMSNEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-AMSTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-DENNEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-DFWNEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-EWRNEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-FARNEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-HOUNEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-IADNEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-IRON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-MSPNEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-NEWYOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRV-NIMBLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NAV_Cust_ID__c</fullName>
        <description>Navision Sell To Customer ID</description>
        <label>NAV Cust ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Comments_to_OA__c</fullName>
        <label>Notes/Comments to OA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Currency__c</fullName>
        <formula>TEXT(Opportunity__r.CurrencyIsoCode)</formula>
        <label>Opportunity Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field pulls the opportunity owner from opportunity</description>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT( Opportunity__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Submission_Date__c</fullName>
        <label>Original Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POC_End_Date__c</fullName>
        <label>POC End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POC_Start_Date__c</fullName>
        <label>POC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number (Inactive)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>N30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Install_Date__c</fullName>
        <defaultValue>Today()+21</defaultValue>
        <label>Planned Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Scheduled_Ship_Date__c</fullName>
        <label>Previous Scheduled Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Date__c</fullName>
        <label>Purchase Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reject_Comment__c</fullName>
        <label>Reject Notes/Comments from OA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date__c</fullName>
        <defaultValue>Today()+14</defaultValue>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reseller_Account__c</fullName>
        <formula>Opportunity__r.Reseller_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Status__c</fullName>
        <formula>Opportunity__r.CH_Partner_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <inlineHelpText>This field will be updated upon submission and approval by OA.</inlineHelpText>
        <label>SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Amount__c</fullName>
        <label>Sales Order Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Total_Price__c</fullName>
        <label>Sales Order Total Price</label>
        <summarizedField>Sales_Order_Line__c.Sale_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.BOM_Level__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Same_as_Sold_To_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the Sold To information will be copied into the Ship To information.</description>
        <inlineHelpText>When selected, the Sold To information will be copied into the Ship To information.</inlineHelpText>
        <label>Same as Sold To Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Distributor__c</fullName>
        <label>Share Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Term__c</fullName>
        <label>Ship Term</label>
        <picklist>
            <picklistValues>
                <fullName>FCA Origin (standard NA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP (approval required from ops)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP  (standard INTL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP (standard INTL)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_1__c</fullName>
        <label>Ship To Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_2__c</fullName>
        <label>Ship To Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Company__c</fullName>
        <label>Ship To Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Email__c</fullName>
        <label>Ship To Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Name__c</fullName>
        <label>Ship To Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Phone__c</fullName>
        <label>Ship To Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip_Postal_Code__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>Ship to State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <label>Scheduled Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Method_Code__c</fullName>
        <label>Shipment Method Code</label>
        <picklist>
            <picklistValues>
                <fullName>CFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELIVERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA SJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB ORIGIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB SJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PICKUP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipment_Priority__c</fullName>
        <label>Shipment Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Agent_Code__c</fullName>
        <label>Shipping Agent Code</label>
        <picklist>
            <picklistValues>
                <fullName>AERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEST WAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVERSION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRANE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPEDITORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEDEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLASH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WILL CALL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Agent_Services_Code__c</fullName>
        <label>Shipping Agent Services Code</label>
        <picklist>
            <picklistValues>
                <fullName>2 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTDAY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Agent_Website__c</fullName>
        <label>Shipping Agent Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SoD_Instance__c</fullName>
        <formula>Opportunity__r.SoD_Instance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SoD Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoD_Performance_Tier__c</fullName>
        <label>SoD Performance Tier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoD_Price__c</fullName>
        <formula>Opportunity__r.SoD_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SoD Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to OA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by OA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by OA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order in Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <label>Taxable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No =&gt; Resale Tax Certificate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eval Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eval Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loaner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trunk Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prebuild</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT or GST#</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>wave broadband</label>
    </listViews>
    <nameField>
        <label>Sales Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Bill_To_Address_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL( Type__c , &quot;Revenue&quot;), 
ISPICKVAL( Type__c , &quot;Support Renewal&quot;), 
ISPICKVAL( Type__c , &quot;Revenue &amp; Eval Conversion&quot;), 
ISPICKVAL( Type__c , &quot;Eval Order&quot;), 
ISPICKVAL( Type__c , &quot;Eval Conversion&quot;), 
ISPICKVAL( Type__c , &quot;Loaner&quot;), 
ISPICKVAL( Type__c , &quot;Beta&quot;), 
ISPICKVAL( Type__c , &quot;Transfer&quot;), 
ISPICKVAL( Type__c , &quot;Prebuild&quot;) 
), 

ISBLANK(  Bill_To_Address_1__c  ), 

$User.ProfileId &lt;&gt; &quot;00e80000000yFjZ&quot;, 
$User.ProfileId &lt;&gt; &quot;00e800000018mIq&quot;, 
$User.ProfileId &lt;&gt; &quot;00e800000018noP&quot;,
$User.ProfileId &lt;&gt; &quot;00e800000018ois&quot;,
$Profile.Name &lt;&gt; &quot;NS-SALES-SuperUser&quot;,
$Profile.Name &lt;&gt; &quot;NS-Supp-Developer&quot;
)</errorConditionFormula>
        <errorDisplayField>Bill_To_Address_1__c</errorDisplayField>
        <errorMessage>All Sales Orders must have a Bill To Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_City_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL( Type__c , &quot;Revenue&quot;), 
ISPICKVAL( Type__c , &quot;Support Renewal&quot;), 
ISPICKVAL( Type__c , &quot;Revenue &amp; Eval Conversion&quot;), 
ISPICKVAL( Type__c , &quot;Eval Order&quot;), 
ISPICKVAL( Type__c , &quot;Eval Conversion&quot;), 
ISPICKVAL( Type__c , &quot;Loaner&quot;), 
ISPICKVAL( Type__c , &quot;Beta&quot;), 
ISPICKVAL( Type__c , &quot;Transfer&quot;), 
ISPICKVAL( Type__c , &quot;Prebuild&quot;) 
), 


ISBLANK(  Bill_To_City__c  ), 

$User.ProfileId &lt;&gt; &quot;00e80000000yFjZ&quot;, 
$User.ProfileId &lt;&gt; &quot;00e800000018mIq&quot;, 
$User.ProfileId &lt;&gt; &quot;00e800000018noP&quot;,
$User.ProfileId &lt;&gt; &quot;00e800000018ois&quot;,
$Profile.Name &lt;&gt; &quot;NS-SALES-SuperUser&quot;,
$Profile.Name &lt;&gt; &quot;NS-Supp-Developer&quot; 
)</errorConditionFormula>
        <errorDisplayField>Bill_To_City__c</errorDisplayField>
        <errorMessage>All Sales Orders must have a Bill To City</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Company_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL( Type__c , &quot;Revenue&quot;), 
ISPICKVAL( Type__c , &quot;Support Renewal&quot;), 
ISPICKVAL( Type__c , &quot;Revenue &amp; Eval Conversion&quot;), 
ISPICKVAL( Type__c , &quot;Eval Order&quot;), 
ISPICKVAL( Type__c , &quot;Eval Conversion&quot;), 
ISPICKVAL( Type__c , &quot;Loaner&quot;), 
ISPICKVAL( Type__c , &quot;Beta&quot;), 
ISPICKVAL( Type__c , &quot;Transfer&quot;), 
ISPICKVAL( Type__c , &quot;Prebuild&quot;) 
), 


ISBLANK(  Bill_To_Company__c  ), 

$User.ProfileId &lt;&gt; &quot;00e80000000yFjZ&quot;, 
$User.ProfileId &lt;&gt; &quot;00e800000018mIq&quot;, 
$User.ProfileId &lt;&gt; &quot;00e800000018noP&quot;,
$User.ProfileId &lt;&gt; &quot;00e800000018ois&quot;,
$Profile.Name &lt;&gt; &quot;NS-SALES-SuperUser&quot;,
$Profile.Name &lt;&gt; &quot;NS-Supp-Developer&quot;
)</errorConditionFormula>
        <errorDisplayField>Bill_To_Company__c</errorDisplayField>
        <errorMessage>All Sales Orders must have a Bill To Company</errorMessage>
    </validationRules>
</CustomObject>